--- a/VUIComponents/Classes/Components/UI/Card/HeaderCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/HeaderCardView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +17,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeaderCardView">
             <connections>
+                <outlet property="avatarImageHeightConstraint" destination="5d2-d1-Qms" id="czm-Hy-ckJ"/>
+                <outlet property="avatarImageTopConstraint" destination="dDS-1p-4GK" id="vXQ-jt-mxk"/>
+                <outlet property="avatarImgView" destination="OEx-M0-X3Q" id="Pt4-eV-ZsR"/>
                 <outlet property="buttonViewContainer" destination="PVW-T6-H5n" id="qsr-Jt-pcX"/>
-                <outlet property="buttonsViewBottomConstraint" destination="xgV-fn-20k" id="kn3-pH-RcC"/>
+                <outlet property="buttonsViewBottomConstraint" destination="0SS-PB-jpB" id="dUO-eM-X81"/>
                 <outlet property="buttonsViewHeighConstraint" destination="FtH-9i-IbP" id="yTF-AO-yfW"/>
+                <outlet property="containerView" destination="sFy-rS-SW4" id="cZQ-Gu-dWl"/>
+                <outlet property="contentView" destination="07k-xf-VjW" id="VOm-yZ-iSj"/>
                 <outlet property="descLabel" destination="dT7-ub-WGp" id="aa5-4n-3Re"/>
                 <outlet property="descLabelBottomConstraint" destination="0fT-sB-ugg" id="RW4-lc-gfq"/>
                 <outlet property="descLabelTopConstraint" destination="Wpe-ss-DzW" id="Rue-Ki-JoD"/>
                 <outlet property="filterSeparator" destination="Y0U-TX-DFf" id="yqg-MO-ith"/>
+                <outlet property="footerHeightConstraint" destination="Wpb-m6-UUf" id="ara-eT-bWx"/>
+                <outlet property="footerLabel" destination="Fic-Un-cKI" id="RXH-SR-zxC"/>
+                <outlet property="footerLabelBottomConstraint" destination="ZwS-VS-8H1" id="Pnb-Yg-vCP"/>
                 <outlet property="subtitleLabel" destination="FKv-nw-mMm" id="APj-b8-7Oo"/>
                 <outlet property="subttileLabelTopConstraint" destination="kRC-al-1Ew" id="xef-QG-sqg"/>
                 <outlet property="titleLabel" destination="ae3-MQ-vad" id="qj0-XT-Rjw"/>
@@ -36,17 +44,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="335" height="156"/>
+            <rect key="frame" x="0.0" y="0.0" width="335" height="190"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="07k-xf-VjW">
-                    <rect key="frame" x="0.0" y="0.0" width="335" height="156"/>
+                    <rect key="frame" x="0.0" y="0.0" width="335" height="190"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MVV-Q3-oy2">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="156"/>
+                            <rect key="frame" x="0.0" y="0.0" width="335" height="190"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning_sl" translatesAutoresizingMaskIntoConstraints="NO" id="4cC-LQ-qqB">
-                                    <rect key="frame" x="0.0" y="0.0" width="335" height="960"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="1920"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -57,7 +65,7 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Sample Text" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ae3-MQ-vad" customClass="AnaVodafoneLabel">
-                            <rect key="frame" x="21" y="30" width="295" height="35"/>
+                            <rect key="frame" x="20" y="30" width="295" height="35"/>
                             <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="28"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -67,7 +75,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KVJ-n6-iVS" userLabel="FilterView">
-                            <rect key="frame" x="20" y="85" width="295" height="71"/>
+                            <rect key="frame" x="20" y="85" width="295" height="105"/>
                             <subviews>
                                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mp0-L4-Mbs" userLabel="TopView">
                                     <rect key="frame" x="0.0" y="0.0" width="295" height="28"/>
@@ -109,8 +117,15 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sFy-rS-SW4">
-                            <rect key="frame" x="20" y="85" width="295" height="71"/>
+                            <rect key="frame" x="20" y="85" width="295" height="105"/>
                             <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OEx-M0-X3Q">
+                                    <rect key="frame" x="107.5" y="0.0" width="80" height="0.0"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" id="5d2-d1-Qms"/>
+                                        <constraint firstAttribute="width" constant="80" id="Rrc-bt-FxC"/>
+                                    </constraints>
+                                </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKv-nw-mMm" customClass="AnaVodafoneLabel">
                                     <rect key="frame" x="15" y="0.0" width="265" height="21"/>
                                     <constraints>
@@ -136,32 +151,50 @@
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVW-T6-H5n">
-                                    <rect key="frame" x="-0.5" y="72" width="295" height="0.0"/>
+                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PVW-T6-H5n">
+                                    <rect key="frame" x="0.0" y="105" width="295" height="0.0"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" id="FtH-9i-IbP"/>
                                     </constraints>
                                 </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fic-Un-cKI" customClass="AnaVodafoneLabel">
+                                    <rect key="frame" x="15" y="200" width="265" height="17"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" id="Wpb-m6-UUf"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="Fic-Un-cKI" firstAttribute="top" secondItem="PVW-T6-H5n" secondAttribute="bottom" id="0SS-PB-jpB"/>
                                 <constraint firstItem="PVW-T6-H5n" firstAttribute="top" secondItem="dT7-ub-WGp" secondAttribute="bottom" id="0fT-sB-ugg"/>
                                 <constraint firstItem="FKv-nw-mMm" firstAttribute="centerX" secondItem="sFy-rS-SW4" secondAttribute="centerX" id="2F4-hU-PNo"/>
                                 <constraint firstItem="PVW-T6-H5n" firstAttribute="centerX" secondItem="sFy-rS-SW4" secondAttribute="centerX" id="BA7-2u-Iec"/>
                                 <constraint firstItem="dT7-ub-WGp" firstAttribute="centerX" secondItem="FKv-nw-mMm" secondAttribute="centerX" id="SoQ-Yl-q6Q"/>
+                                <constraint firstItem="OEx-M0-X3Q" firstAttribute="centerX" secondItem="sFy-rS-SW4" secondAttribute="centerX" id="Ssg-cF-n4j"/>
                                 <constraint firstItem="PVW-T6-H5n" firstAttribute="width" secondItem="sFy-rS-SW4" secondAttribute="width" id="TE5-lr-MZM"/>
                                 <constraint firstItem="FKv-nw-mMm" firstAttribute="width" secondItem="sFy-rS-SW4" secondAttribute="width" constant="-30" id="Upz-rW-0fq"/>
                                 <constraint firstItem="dT7-ub-WGp" firstAttribute="top" secondItem="FKv-nw-mMm" secondAttribute="bottom" id="Wpe-ss-DzW"/>
+                                <constraint firstItem="Fic-Un-cKI" firstAttribute="width" secondItem="FKv-nw-mMm" secondAttribute="width" id="Z0a-aP-ETZ"/>
+                                <constraint firstAttribute="bottom" secondItem="Fic-Un-cKI" secondAttribute="bottom" id="ZwS-VS-8H1"/>
+                                <constraint firstItem="OEx-M0-X3Q" firstAttribute="top" secondItem="sFy-rS-SW4" secondAttribute="top" id="dDS-1p-4GK"/>
                                 <constraint firstItem="dT7-ub-WGp" firstAttribute="width" secondItem="FKv-nw-mMm" secondAttribute="width" id="en3-ju-VPp"/>
                                 <constraint firstAttribute="right" secondItem="FKv-nw-mMm" secondAttribute="right" constant="15" id="gcC-4Y-24O"/>
                                 <constraint firstItem="FKv-nw-mMm" firstAttribute="top" secondItem="sFy-rS-SW4" secondAttribute="top" id="kRC-al-1Ew"/>
+                                <constraint firstItem="Fic-Un-cKI" firstAttribute="centerX" secondItem="sFy-rS-SW4" secondAttribute="centerX" id="kTJ-zW-dxS"/>
                                 <constraint firstItem="FKv-nw-mMm" firstAttribute="left" secondItem="sFy-rS-SW4" secondAttribute="left" constant="15" id="o6o-xO-bBq"/>
-                                <constraint firstAttribute="bottom" secondItem="PVW-T6-H5n" secondAttribute="bottom" id="xgV-fn-20k"/>
                             </constraints>
                         </view>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowbar" translatesAutoresizingMaskIntoConstraints="NO" id="hvu-RO-Fdw">
-                            <rect key="frame" x="0.0" y="142" width="335" height="50"/>
+                            <rect key="frame" x="0.0" y="176" width="335" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="JG6-Nf-8aa"/>
                             </constraints>
@@ -195,7 +228,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="07k-xf-VjW" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="5at-Tz-hJ1"/>
                 <constraint firstItem="07k-xf-VjW" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="UTm-fr-xOz"/>
@@ -206,11 +239,11 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="13.5" y="266.5"/>
+            <point key="canvasLocation" x="12" y="281.55922038980509"/>
         </view>
     </objects>
     <resources>
         <image name="arrowbar" width="375" height="54"/>
-        <image name="morning_sl" width="540" height="960"/>
+        <image name="morning_sl" width="1080" height="1920"/>
     </resources>
 </document>
