--- a/Example/VUIComponents/Base.lproj/Main.storyboard
+++ b/Example/VUIComponents/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,12 +20,111 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning_sl" translatesAutoresizingMaskIntoConstraints="NO" id="BRW-oH-Deq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="top" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="gim-1e-nId">
+                                <rect key="frame" x="0.0" y="230" width="375" height="207"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yve-hK-sPa">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.27893415179999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="8Q0-l5-TO4"/>
+                                        </constraints>
+                                        <state key="normal" title="TableViewWithHeaderCardView"/>
+                                        <connections>
+                                            <segue destination="yfZ-gW-wRf" kind="show" id="g3R-XS-3fL"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgd-cC-Oxu">
+                                        <rect key="frame" x="0.0" y="54" width="375" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.27893415179999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="NKw-rM-hGU"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lW-yw-LWa">
+                                        <rect key="frame" x="0.0" y="108" width="375" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.27893415179999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="nB7-EQ-wAu"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBP-TV-14p">
+                                        <rect key="frame" x="0.0" y="162" width="375" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.27893415179999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="WoX-SN-xZe"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gim-1e-nId" firstAttribute="centerY" secondItem="TpU-gO-2f1" secondAttribute="centerY" id="2YF-xS-7zI"/>
+                            <constraint firstItem="gim-1e-nId" firstAttribute="width" secondItem="TpU-gO-2f1" secondAttribute="width" id="E4c-hC-UHP"/>
+                            <constraint firstItem="BRW-oH-Deq" firstAttribute="height" secondItem="TpU-gO-2f1" secondAttribute="height" id="JVq-Tz-f9g"/>
+                            <constraint firstItem="BRW-oH-Deq" firstAttribute="centerY" secondItem="TpU-gO-2f1" secondAttribute="centerY" id="UfV-KL-vFG"/>
+                            <constraint firstItem="BRW-oH-Deq" firstAttribute="width" secondItem="TpU-gO-2f1" secondAttribute="width" id="YeF-y0-26k"/>
+                            <constraint firstItem="gim-1e-nId" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="gJq-5R-As4"/>
+                            <constraint firstItem="BRW-oH-Deq" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="yRp-9E-1Cl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="433"/>
+            <point key="canvasLocation" x="-9" y="404"/>
+        </scene>
+        <!--View Controller Table Card Sample-->
+        <scene sceneID="sr4-NW-Abk">
+            <objects>
+                <viewController id="yfZ-gW-wRf" customClass="ViewControllerTableCardSample" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jeg-o0-jpP"/>
+                        <viewControllerLayoutGuide type="bottom" id="H7U-l0-7tX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lJP-eP-jK6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning_sl" translatesAutoresizingMaskIntoConstraints="NO" id="t6D-00-jRm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AJ9-PW-mpl" customClass="TableCardView">
+                                <rect key="frame" x="0.0" y="28" width="375" height="10"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="yeg-5M-IbI"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AJ9-PW-mpl" firstAttribute="width" secondItem="lJP-eP-jK6" secondAttribute="width" id="EDM-yl-3Sc"/>
+                            <constraint firstItem="t6D-00-jRm" firstAttribute="centerX" secondItem="lJP-eP-jK6" secondAttribute="centerX" id="HI8-KL-Btb"/>
+                            <constraint firstItem="t6D-00-jRm" firstAttribute="width" secondItem="lJP-eP-jK6" secondAttribute="width" id="MQN-QH-DB0"/>
+                            <constraint firstItem="t6D-00-jRm" firstAttribute="height" secondItem="lJP-eP-jK6" secondAttribute="height" id="P1n-lx-dAz"/>
+                            <constraint firstItem="t6D-00-jRm" firstAttribute="centerY" secondItem="lJP-eP-jK6" secondAttribute="centerY" id="Psm-t2-qbd"/>
+                            <constraint firstItem="AJ9-PW-mpl" firstAttribute="top" secondItem="jeg-o0-jpP" secondAttribute="bottom" constant="8" id="g5l-L7-fgC"/>
+                            <constraint firstItem="AJ9-PW-mpl" firstAttribute="centerX" secondItem="lJP-eP-jK6" secondAttribute="centerX" id="oQk-px-5VT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableCardView" destination="AJ9-PW-mpl" id="B7P-ZM-XQp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="obd-t8-fVD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="888.79999999999995" y="334.18290854572717"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="morning_sl" width="1080" height="1920"/>
+    </resources>
 </document>
